--- a/index.html
+++ b/index.html
@@ -56,10 +56,20 @@
           class="hidden text-[10px] mt-2 bg-black/20 p-1 rounded px-2 inline-block backdrop-blur-sm"
         ></p>
         <button
+          id="link-account-btn"
           onclick="secureMyAccount()"
-          class="mt-2 text-[10px] bg-amber-600 hover:bg-amber-700 text-white px-2 py-1 rounded"
+          style="
+            background: red;
+            color: white;
+            padding: 10px;
+            width: 100%;
+            font-weight: bold;
+            z-index: 9999;
+            position: relative;
+          "
+          disabled
         >
-          Save My Account Data
+          CLICK HERE TO SAVE DATA ACCOUNT
         </button>
       </header>
 
