--- a/www/index.html
+++ b/www/index.html
@@ -16,19 +16,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='8' y='14' width='48' height='42' rx='8' fill='%235a67d8'/%3E%3Crect x='8' y='10' width='48' height='10' rx='6' fill='%236c7ae0'/%3E%3Ccircle cx='20' cy='20' r='3' fill='white'/%3E%3Ccircle cx='44' cy='20' r='3' fill='white'/%3E%3Ctext x='32' y='40' font-size='18' text-anchor='middle' fill='white' font-family='Arial' font-weight='bold'%3EAM%3C/text%3E%3C/svg%3E"
-    />
+    <link rel="icon" type="image/png" href="images/app-logo.png" />
+    <link rel="apple-touch-icon" href="images/app-logo.png" />
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#4f46e5" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
+    />
+    <meta
+      name="google-signin-client_id"
+      content="1083294283084-n5775c6fmvq1i0rbkk2knjcgvvqj4a1o.apps.googleusercontent.com"
     />
     <meta
       name="description"
@@ -42,35 +44,37 @@
       >
         <div class="flex justify-between items-start">
           <div>
-            <h1 class="text-xl font-bold tracking-tight">Appointment Maker</h1>
+            <h1 class="text-xl font-bold tracking-tight">
+              Appointment Maker Pro
+            </h1>
             <p class="text-xs text-indigo-100 opacity-90 mt-1">
               Pro Booking System
             </p>
           </div>
-          <div class="bg-white/20 p-2 rounded-lg backdrop-blur-sm">
-            <i class="fas fa-calendar-check text-xl"></i>
+          <div class="flex gap-2" style="margin-right: 8px">
+            <button
+              onclick="toggleTheme()"
+              aria-label="Toggle theme"
+              class="bg-white/20 p-2 rounded-lg backdrop-blur-sm"
+            >
+              <i class="fas fa-moon text-xl"></i>
+            </button>
+            <div class="bg-white/20 p-2 rounded-lg backdrop-blur-sm">
+              <i class="fas fa-calendar-check text-xl"></i>
+            </div>
+            <button
+              onclick="toggleSettingsMenu()"
+              aria-label="Open menu"
+              class="bg-white/20 p-2 rounded-lg backdrop-blur-sm"
+            >
+              <i class="fas fa-cog text-xl"></i>
+            </button>
           </div>
         </div>
         <p
           id="user-id-display"
           class="hidden text-[10px] mt-2 bg-black/20 p-1 rounded px-2 inline-block backdrop-blur-sm"
         ></p>
-        <button
-          id="link-account-btn"
-          onclick="secureMyAccount()"
-          style="
-            background: red;
-            color: white;
-            padding: 10px;
-            width: 100%;
-            font-weight: bold;
-            z-index: 9999;
-            position: relative;
-          "
-          disabled
-        >
-          CLICK HERE TO SAVE DATA ACCOUNT
-        </button>
       </header>
 
       <main class="flex-grow overflow-y-auto p-4 pb-24" id="main-content">
@@ -90,10 +94,12 @@
           </p>
         </div>
 
-        <div id="calendar-view" class="hidden fade-in"></div>
-        <div id="upcoming-view" class="hidden fade-in"></div>
-        <div id="add-appointment-view" class="hidden fade-in"></div>
-        <div id="service-management-view" class="hidden fade-in"></div>
+        <div id="app-content">
+          <div id="calendar-view" class="hidden fade-in"></div>
+          <div id="upcoming-view" class="hidden fade-in"></div>
+          <div id="add-appointment-view" class="hidden fade-in"></div>
+          <div id="service-management-view" class="hidden fade-in"></div>
+        </div>
       </main>
 
       <div
@@ -232,7 +238,8 @@
       </div>
 
       <nav
-        class="fixed bottom-4 left-4 right-4 bg-white/80 backdrop-blur-md border border-white/40 shadow-2xl rounded-2xl z-40"
+        id="bottom-nav"
+        class="fixed bottom-16 left-4 right-4 bg-white/80 backdrop-blur-md border border-white/40 shadow-2xl rounded-2xl z-40"
         style="max-width: 480px; margin-left: auto; margin-right: auto"
       >
         <div class="flex justify-around items-center h-16 px-2">
@@ -288,5 +295,169 @@
     </div>
 
     <script type="module" src="app.js"></script>
+    <div
+      id="settings-menu"
+      class="fixed inset-0 z-50 hidden"
+      aria-modal="true"
+      role="dialog"
+    >
+      <div
+        class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm transition-opacity"
+        id="settings-menu-bg"
+      ></div>
+      <div class="fixed inset-0 overflow-y-auto">
+        <div class="flex min-h-full items-center justify-center p-4">
+          <div
+            class="relative w-full max-w-sm transform rounded-2xl bg-white/95 backdrop-blur-xl shadow-2xl transition-all border border-white/50 p-6"
+            id="settings-menu-panel"
+          >
+            <div class="flex justify-between items-center mb-2">
+              <h3 class="text-lg font-bold text-gray-800">Menu</h3>
+              <button
+                onclick="toggleSettingsMenu()"
+                class="text-gray-400 hover:text-gray-600"
+              >
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+            <div class="space-y-2">
+              <button
+                onclick="rateApp()"
+                class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
+              >
+                <i class="fas fa-star text-yellow-500"></i>
+                <span class="text-sm">Rate app</span>
+              </button>
+              <button
+                onclick="shareApp()"
+                class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
+              >
+                <i class="fas fa-share-alt text-indigo-500"></i>
+                <span class="text-sm">Share app</span>
+              </button>
+              <button
+                onclick="openPrivacyPolicy()"
+                class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
+              >
+                <i class="fas fa-shield-alt text-gray-600"></i>
+                <span class="text-sm">Privacy Policy</span>
+              </button>
+              <button
+                onclick="openTermsOfService()"
+                class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-gray-100"
+              >
+                <i class="fas fa-file-contract text-gray-600"></i>
+                <span class="text-sm">Terms of Service</span>
+              </button>
+            </div>
+            <div class="border-t mt-6 mb-7"></div>
+            <div class="mt-2 text-sm font-bold text-gray-800 mb-4">
+              Settings
+            </div>
+            <div class="space-y-4">
+              <div class="flex items-center justify-between">
+                <label class="text-sm">WhatsApp country code</label>
+                <input
+                  id="whatsapp-cc-input"
+                  type="text"
+                  class="w-24 p-2 border rounded-lg text-sm"
+                  value="27"
+                />
+              </div>
+              <div class="flex items-center justify-between">
+                <label class="text-sm">Language</label>
+                <select
+                  id="language-select"
+                  class="p-2 border rounded-lg text-sm w-36"
+                >
+                  <option value="en">English</option>
+                  <option value="af">Afrikaans</option>
+                  <option value="zu">Zulu</option>
+                </select>
+              </div>
+              <button
+                onclick="saveSettingsMenu()"
+                class="w-full mt-3 mb-6 bg-indigo-600 text-white text-sm font-semibold py-3 rounded-xl hover:bg-indigo-700"
+              >
+                Save
+              </button>
+            </div>
+            <div class="border-t mt-6"></div>
+            <button
+              onclick="logout()"
+              class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-red-50"
+            >
+              <i class="fas fa-sign-out-alt text-red-600"></i>
+              <span class="text-sm text-red-700">Sign out</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      id="login-overlay"
+      class="fixed inset-0 bg-gray-900 z-50 flex flex-col items-center justify-center p-4"
+    >
+      <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-sm">
+        <h2
+          id="auth-title"
+          class="text-2xl font-bold mb-4 text-center text-indigo-600"
+        >
+          Sign In
+        </h2>
+        <input
+          type="email"
+          id="auth-email"
+          placeholder="Email"
+          class="w-full p-3 mb-3 border rounded border-gray-300"
+        />
+        <div class="relative mb-6">
+          <input
+            type="password"
+            id="auth-password"
+            placeholder="Password"
+            class="w-full p-3 border rounded border-gray-300 pr-16"
+          />
+          <button
+            type="button"
+            onclick="togglePasswordVisibility()"
+            aria-label="Toggle password visibility"
+            class="absolute z-10 text-gray-600 hover:text-indigo-600"
+            style="right: 28px; top: 58%; transform: translateY(-50%)"
+          >
+            <i id="password-visibility-icon" class="fas fa-eye"></i>
+          </button>
+        </div>
+        <button
+          onclick="handleAuth()"
+          id="auth-button"
+          class="w-full bg-indigo-600 text-white font-bold py-3 rounded hover:bg-indigo-700 transition"
+        >
+          Log In
+        </button>
+        <div class="flex items-center my-4">
+          <div class="flex-1 border-t"></div>
+          <span class="px-3 text-xs text-gray-500">or</span>
+          <div class="flex-1 border-t"></div>
+        </div>
+        <button
+          onclick="googleLogin()"
+          class="w-full bg-white border border-gray-300 text-gray-800 font-semibold py-3 rounded hover:bg-gray-50 transition flex items-center justify-center gap-2"
+        >
+          <i class="fab fa-google text-red-500"></i>
+          <span>Sign in with Google</span>
+        </button>
+        <p id="login-error" class="text-red-500 mt-4 text-center hidden"></p>
+        <p class="text-center mt-4 text-gray-600">
+          <span id="auth-toggle-text">New user?</span>
+          <button
+            onclick="toggleAuthMode()"
+            class="text-indigo-600 font-bold hover:text-indigo-800 transition"
+          >
+            Register
+          </button>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
