--- a/android/app/src/main/assets/public/index.html
+++ b/android/app/src/main/assets/public/index.html
@@ -36,6 +36,8 @@
       name="description"
       content="Book and manage appointments with service management, upcoming views, calendar scheduling, and contact tools."
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
   </head>
   <body>
     <div id="app" class="flex flex-col">
@@ -365,17 +367,47 @@
                   value="27"
                 />
               </div>
-              <div class="flex items-center justify-between">
-                <label class="text-sm">Language</label>
-                <select
-                  id="language-select"
-                  class="p-2 border rounded-lg text-sm w-36"
-                >
-                  <option value="en">English</option>
-                  <option value="af">Afrikaans</option>
-                  <option value="zu">Zulu</option>
-                </select>
+              <div class="border-t mt-6 mb-4"></div>
+              <div class="text-sm font-bold text-gray-800 mb-2">
+                Export Schedule
               </div>
+              <div class="mb-3">
+                <label class="block text-xs text-gray-500 mb-1"
+                  >Business / Calendar Name</label
+                >
+                <input
+                  type="text"
+                  id="export-name"
+                  placeholder="e.g. Business Name"
+                  class="w-full p-2 bg-gray-50 border border-gray-200 rounded text-xs focus:ring-indigo-500 focus:border-indigo-500"
+                />
+              </div>
+              <div class="grid grid-cols-2 gap-2 mb-3">
+                <div>
+                  <label class="block text-xs text-gray-500 mb-1">From</label>
+                  <input
+                    type="date"
+                    id="export-start"
+                    class="w-full p-2 bg-gray-50 border border-gray-200 rounded text-xs focus:ring-indigo-500 focus:border-indigo-500"
+                  />
+                </div>
+                <div>
+                  <label class="block text-xs text-gray-500 mb-1">To</label>
+                  <input
+                    type="date"
+                    id="export-end"
+                    class="w-full p-2 bg-gray-50 border border-gray-200 rounded text-xs focus:ring-indigo-500 focus:border-indigo-500"
+                  />
+                </div>
+              </div>
+              <button
+                id="export-pdf-btn"
+                onclick="downloadPDF()"
+                class="w-full flex items-center justify-center gap-2 p-3 rounded-lg bg-indigo-50 hover:bg-indigo-100 text-indigo-700 transition font-semibold"
+              >
+                <i class="fas fa-file-pdf"></i>
+                <span class="text-sm">Share or Download PDF</span>
+              </button>
               <button
                 onclick="saveSettingsMenu()"
                 class="w-full mt-3 mb-6 bg-indigo-600 text-white text-sm font-semibold py-3 rounded-xl hover:bg-indigo-700"
@@ -427,6 +459,14 @@
             style="right: 28px; top: 58%; transform: translateY(-50%)"
           >
             <i id="password-visibility-icon" class="fas fa-eye"></i>
+          </button>
+        </div>
+        <div class="text-right mb-2">
+          <button
+            onclick="resetPassword()"
+            class="text-xs text-indigo-600 hover:text-indigo-800"
+          >
+            Forgot Password?
           </button>
         </div>
         <button
